Restrict power to open/close issues to moderators.

--- a/stackato.yml
+++ b/stackato.yml
@@ -27,3 +27,4 @@ mem: 128M
 # Prevent the local "localconfig" from being synced
 ignores:
   - localconfig
+# Could add data/params here if we want the params to diverge
