--- a/stackato.yml
+++ b/stackato.yml
@@ -27,4 +27,6 @@ mem: 128M
 # Prevent the local "localconfig" from being synced
 ignores:
   - localconfig
+  - .git
+
 # Could add data/params here if we want the params to diverge
